backend-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-lb
  labels:
    app: backend-lb
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: backend-pods
