backend-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-nodeport
  labels:
    app: backend-nodeport
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    #nodePort: 31076
  selector:
    app: backend-pods
  # sessionAffinity: None
  type: NodePort
