scrapmap-backend.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: scrapmap-backend
  labels:
    app: scrapmap-backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: scrapmap-backend
    spec:
      containers:
      - name: scrapmap-backend
        # Replace  with your project ID or use `make template`
        image: gcr.io/scrapmap-alpha/backend
        # This setting makes nodes pull the docker image every time before
        # starting the pod. This is useful when debugging, but should be turned
        # off in production.
        imagePullPolicy: Always
        # env:
        #     # [START cloudsql_secrets]
        #     - name: DATABASE_USER
        #       valueFrom:
        #         secretKeyRef:
        #           name: cloudsql
        #           key: username
        #     - name: DATABASE_PASSWORD
        #       valueFrom:
        #         secretKeyRef:
        #           name: cloudsql
        #           key: password
        #     # [END cloudsql_secrets]
        ports:
        - containerPort: 8079

      # [START proxy_container]
      # - image: gcr.io/cloudsql-docker/gce-proxy:1.16
      #   name: cloudsql-proxy
      #   command: ["/cloud_sql_proxy", "--dir=/cloudsql",
      #             "-instances=gcp-cloud-tutorial-69:us-east1:scrapmap-test=tcp:5432",
      #             "-credential_file=/secrets/cloudsql/credentials.json"]
      #   volumeMounts:
      #     - name: cloudsql-oauth-credentials
      #       mountPath: /secrets/cloudsql
      #       readOnly: true
      #     - name: ssl-certs
      #       mountPath: /etc/ssl/certs
      #     - name: cloudsql
      #       mountPath: /cloudsql
      # [END proxy_container] 
      # # [START frontend ]
      # - name: frontend
      #   image: gcr.io/gcp-cloud-tutorial-69/scrapmap-frontend
      #   imagePullPolicy: Always
      #   ports:
      #     - containerPort: 8080
      # # [END frontend ]
      # [START volumes]
      # volumes:
      #   - name: cloudsql-oauth-credentials
      #     secret:
      #       secretName: cloudsql-oauth-credentials
      #   - name: ssl-certs
      #     hostPath:
      #       path: /etc/ssl/certs
      #   - name: cloudsql
      #     emptyDir:
      # [END volumes]        
# [END kubernetes_deployment]

---

# [START service]
# The polls service provides a load-balancing proxy over the polls app
# pods. By specifying the type as a 'LoadBalancer', Container Engine will
# create an external HTTP load balancer.
# For more information about Services see:
#   https://cloud.google.com/container-engine/docs/services/
# For more information about external HTTP load balancing see:
#   https://cloud.google.com/container-engine/docs/load-balancer
apiVersion: v1
kind: Service
metadata:
  name: scrapmap-backend-lb
  labels:
    app: scrapmap
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: scrapmap-backend
# [END service]
