ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # ingress.kubernetes.io/query-routing: default/query-routing
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec: 
  rules: 
    - host: scrapmap.info
      http:
        paths:
          # - path: /backend(/|$)(.*)
          #   backend: 
          #     serviceName: backend-nodeport
          #     servicePort: 8080
          - path: /?(.*)
            backend:
              serviceName: frontend-nodeport
              servicePort: 80
